--- a/src/main/webapp/app/entities/cartao-credito/cartao-credito.component.html
+++ b/src/main/webapp/app/entities/cartao-credito/cartao-credito.component.html
@@ -15,9 +15,10 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="nomeCartao"><span jhiTranslate="bestmealApp.cartaoCredito.nomeCartao">Nome Cartao</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="bandeira"><span jhiTranslate="bestmealApp.cartaoCredito.bandeira">Bandeira</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="numero"><span jhiTranslate="bestmealApp.cartaoCredito.numero">Numero</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="cv"><span jhiTranslate="bestmealApp.cartaoCredito.cv">Cv</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="cvv"><span jhiTranslate="bestmealApp.cartaoCredito.cvv">Cvv</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="validade"><span jhiTranslate="bestmealApp.cartaoCredito.validade">Validade</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
@@ -25,9 +26,10 @@
             <tbody infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
             <tr *ngFor="let cartaoCredito of cartaoCreditos ;trackBy: trackId">
                 <td><a [routerLink]="['/cartao-credito', cartaoCredito.id, 'view' ]">{{cartaoCredito.id}}</a></td>
+                <td>{{cartaoCredito.nomeCartao}}</td>
                 <td jhiTranslate="{{'bestmealApp.Bandeira.' + cartaoCredito.bandeira}}">{{cartaoCredito.bandeira}}</td>
                 <td>{{cartaoCredito.numero}}</td>
-                <td>{{cartaoCredito.cv}}</td>
+                <td>{{cartaoCredito.cvv}}</td>
                 <td>{{cartaoCredito.validade}}</td>
                 <td class="text-right">
                     <div class="btn-group">
