--- a/src/main/webapp/app/entities/cartao-credito/cartao-credito-update.component.html
+++ b/src/main/webapp/app/entities/cartao-credito/cartao-credito-update.component.html
@@ -1,59 +1,88 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-            <h2 id="jhi-cartao-credito-heading" jhiTranslate="bestmealApp.cartaoCredito.home.createOrEditLabel">Create or edit a Cartao Credito</h2>
+            <h2 id="jhi-cartao-credito-heading" jhiTranslate="bestmealApp.cartaoCredito.home.createOrEditLabel">Create
+                or edit a Cartao Credito</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!cartaoCredito.id">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
-                    <input type="text" class="form-control" id="id" name="id" formControlName="id"
-                        readonly />
+                    <input type="text" class="form-control" id="id" name="id" formControlName="id" readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.bandeira" for="field_bandeira">Bandeira</label>
-                    <select class="form-control" name="bandeira" formControlName="bandeira" id="field_bandeira">
-                        <option value="MASTER">{{'bestmealApp.Bandeira.MASTER' | translate}}</option>
-                        <option value="VISA">{{'bestmealApp.Bandeira.VISA' | translate}}</option>
-                        <option value="ELO">{{'bestmealApp.Bandeira.ELO' | translate}}</option>
-                        <option value="DINNERS">{{'bestmealApp.Bandeira.DINNERS' | translate}}</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.numero" for="field_numero">Numero</label>
-                    <input type="text" class="form-control" name="numero" id="field_numero"
-                           formControlName="numero"/>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.cv" for="field_cv">Cv</label>
-                    <input type="text" class="form-control" name="cv" id="field_cv"
-                           formControlName="cv"/>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.validade" for="field_validade">Validade</label>
-                    <input type="text" class="form-control" name="validade" id="field_validade"
-                           formControlName="validade"/>
-                    <div *ngIf="editForm.get('validade').invalid && (editForm.get('validade').dirty || editForm.get('validade').touched)">
-                        <small class="form-text text-danger"
-                               *ngIf="editForm.get('validade').errors.required" jhiTranslate="entity.validation.required">
-                        This field is required.
+                    <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.nomeCartao"
+                        for="field_nomeCartao">Nome Cartao</label>
+                    <input type="text" class="form-control" name="nomeCartao" id="field_nomeCartao"
+                        formControlName="nomeCartao" />
+                    <div
+                        *ngIf="editForm.get('nomeCartao').invalid && (editForm.get('nomeCartao').dirty || editForm.get('nomeCartao').touched)">
+                        <small class="form-text text-danger" *ngIf="editForm.get('nomeCartao').errors.required"
+                            jhiTranslate="entity.validation.required">
+                            This field is required.
                         </small>
-                        <small class="form-text text-danger"
-                               *ngIf="editForm.get('validade').errors.minlength" jhiTranslate="entity.validation.minlength" [translateValues]="{ min: 5 }">
-                        This field is required to be at least 5 characters.
+
+                        <small class="form-text text-danger" *ngIf="editForm.get('nomeCartao').errors.jhiForbiddenName"
+                            jhiTranslate="entity.validation.forbiddenName"
+                            [translateValues]="{ forbiddenName: 'bosco' }">
+                            This field cannot be longer than 40 characters.
                         </small>
-                        <small class="form-text text-danger"
-                               *ngIf="editForm.get('validade').errors.maxlength" jhiTranslate="entity.validation.maxlength" [translateValues]="{ max: 5 }">
-                        This field cannot be longer than 5 characters.
-                        </small>
+
                     </div>
                 </div>
 
             </div>
+
+            <div class="form-group">
+                <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.bandeira"
+                    for="field_bandeira">Bandeira</label>
+                <select class="form-control" name="bandeira" formControlName="bandeira" id="field_bandeira">
+                    <option value="MASTER">{{'bestmealApp.Bandeira.MASTER' | translate}}</option>
+                    <option value="VISA">{{'bestmealApp.Bandeira.VISA' | translate}}</option>
+                    <option value="ELO">{{'bestmealApp.Bandeira.ELO' | translate}}</option>
+                    <option value="DINNERS">{{'bestmealApp.Bandeira.DINNERS' | translate}}</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.numero"
+                    for="field_numero">Numero</label>
+                <input type="text" class="form-control" name="numero" id="field_numero" formControlName="numero" />
+            </div>
+            <div class="form-group">
+                <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.cvv" for="field_cv">Cv</label>
+                <input type="text" class="form-control" name="cv" id="field_cv" formControlName="cv" />
+            </div>
+            <div class="form-group">
+                <label class="form-control-label" jhiTranslate="bestmealApp.cartaoCredito.validade"
+                    for="field_validade">Validade</label>
+                <input type="text" class="form-control" name="validade" id="field_validade"
+                    formControlName="validade" />
+                <div
+                    *ngIf="editForm.get('validade').invalid && (editForm.get('validade').dirty || editForm.get('validade').touched)">
+                    <small class="form-text text-danger" *ngIf="editForm.get('validade').errors.required"
+                        jhiTranslate="entity.validation.required">
+                        This field is required.
+                    </small>
+                    <small class="form-text text-danger" *ngIf="editForm.get('validade').errors.minlength"
+                        jhiTranslate="entity.validation.minlength" [translateValues]="{ min: 5 }">
+                        This field is required to be at least 5 characters.
+                    </small>
+                    <small class="form-text text-danger" *ngIf="editForm.get('validade').errors.maxlength"
+                        jhiTranslate="entity.validation.maxlength" [translateValues]="{ max: 5 }">
+                        This field cannot be longer than 5 characters.
+                    </small>
+                    <small class="form-text text-danger" *ngIf="editForm.get('validade').errors.validadeCart"
+                        jhiTranslate="entity.validation.validadeCart" [translateValues]="{ mesanoMin: mesano}">
+                        This field should follow pattern for "Validade".
+                    </small>
+
+                </div>
+            </div>
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">
+                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving"
+                    class="btn btn-primary">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                 </button>
             </div>
